1. Метод .of [#401069]