@@ -11,7 +11,7 @@ public class CollectionsSortTest {
     @Test
     public void test() {
         List<String> input = Arrays.asList("c", "b", "a");
-        List<String> expect = Arrays.asList("a", "b", "c");
+        List<String> expect = List.of("a", "b", "c");
         List<String> out = CollectionsSort.sort(input);
         Assert.assertEquals(expect, out);
     }
